--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Linux</title>
 
   <style>
@@ -48,7 +48,7 @@
         Actualmente es responsable de la coordinación del proyecto. También ha desarrollado el software de control de
         versiones Git.
       </p>
-      <img class="img" src="/img/linus.jpg" alt="" />
+      <img class="img" src="img/linus.jpg" alt="" />
 
       <h1>¿Qué es Linux?</h1>
       <p>
@@ -65,7 +65,7 @@
       
       <h2>Distribuciones de el Sistema Operativo Linux más Usadas</h2> 
 
-      <img class="img" src="/img/distrosLinux.png" alt="" /> <br>
+      <img class="img" src="img/distrosLinux.png" alt="" /> <br>
       <ul >
         <li class="lis">Fedora</li>
         <li class="lis">Linux Mint</li>
@@ -79,7 +79,7 @@
         Basada en Debian, Ubuntu es ampliamente utilizada y cuenta con ediciones oficiales para escritorio, servidor y
         núcleo. Es especialmente popular en proyectos de cloud computing.
       </p><br>
-      <img class="img" src="/img/Ubuntu1.png" alt="" /> <br />
+      <img class="img" src="img/Ubuntu1.png" alt="" /> <br />
       <p>
         Para ingresar a la pagina oficial oprime:<a href="https://ubuntu.com/download">Ubuntu</a>
       </p>
@@ -92,7 +92,7 @@
         para descifrar contraseñas. Dado que estas características también pueden utilizarse con fines ilegales, la
         distribución no <br>
         carece de polémica.</p> <br>
-      <img class="img" src="/img/kali.jpeg" alt="" /> <br />
+      <img class="img" src="img/kali.jpeg" alt="" /> <br />
 
       <p>
         Para ingresar a la pagina oficial oprime:<a href="https://www.kali.org/">Kali Linux</a>
@@ -110,7 +110,7 @@
         utilidades básicas <br>
         que hacen que su computadora funcione.
       </p> <br>
-      <img class="img" src="/img/debian.jpg" alt="" /> <br />
+      <img class="img" src="img/debian.jpg" alt="" /> <br />
       <p>
         Para ingresar a la pagina oficial oprime:<a href="https://www.debian.org/index.es.html">Debian</a>
       </p>
@@ -123,7 +123,7 @@
         de forma permanente y que anticipa las actualizaciones que se incluirán en Red Hat Enterprise Linux, también
         posibilita realizar
         aportes al código.</p> <br>
-      <img class="img" src="/img/centOS.jpg" alt="" /> <br />
+      <img class="img" src="img/centOS.jpg" alt="" /> <br />
       <p>
         Para ingresar a la pagina oficial oprime:<a href="https://www.centos.org/">CentOS</a>
       </p>
@@ -134,7 +134,7 @@
       <p>Es un sistema operativo (SO) open source que permite ajustar las aplicaciones actuales e implementar
         tecnologías nuevas en equipos <br>
         sin sistema operativo, entornos virtuales, de contenedores y de nube</p> <br>
-      <img class="img" src="/img/Red-Hat.jpg" alt="" /> <br />
+      <img class="img" src="img/Red-Hat.jpg" alt="" /> <br />
       <p>
         Para ingresar a la pagina oficial oprime:<a
           href="https://www.redhat.com/es/solutions/linux-standardization?sc_cid=7015Y000003ssePQAQ&gad_source=1&gclid=Cj0KCQjwwMqvBhCtARIsAIXsZpZ1476Q0B7J8M-a2P1EbLMrUDOhjs8PIsfZANAUqxukEkYS5C16z4EaAq-DEALw_wcB">RedHat</a>
