--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <section class="footer_widget">
         <h3 class="footer_widget_titulo">Gmail</h3>
         <p class="footer_widget_texto">DyDTecnologia0.1@gmail.com</p>
-      </section>a
+      </section>
     </footer>
 </footer>
    
