--- a/index.html
+++ b/index.html
@@ -66,11 +66,39 @@
       <h2>Distribuciones de el Sistema Operativo Linux más Usadas</h2> 
 
       <img class="img" src="img/distrosLinux.png" alt="" /> <br>
-      <ul >
-        <li class="lis">Fedora</li>
-        <li class="lis">Linux Mint</li>
-        <li class="lis">Suse</li>
-      </ul>
+        <div class="container1">
+        <div class="colum1">
+<ol> 
+   <li><b>Distribuciones populares de Linux</b></li> <br>
+      <ol>
+         <li class="lis">Fedora Linux</li>
+         <li class="lis">Linux Mint</li>
+         <li class="lis">Suse</li>
+         <li class="lis">Android</li>
+         <li class="lis">Arch Linux</li>
+         <li class="lis">Elementary OS</li>
+         <li class="lis">Gentoo Linux</li>
+         <li class="lis">Linux Lite</li>
+        </ol>
+      </ol>
+       </div>
+        <div class="colum1">
+      </ol>
+   <li><b>Distribuciones populares de Linux</b></li><br>
+      <ol>
+        <li class="lis">Linux Lite</li>
+        <li class="lis">  Linux Mint</li>
+        <li class="lis"> Manjaro Linux</li>
+        <li class="lis">MX Linux</li>
+        <li class="lis">openSUSE</li>
+        <li class="lis">Pop!_OS</li>
+        <li class="lis">Puppy Linux</li>
+        <li class="lis">Solus</li>
+
+      </ol>
+</ol>
+</div>
+</div>
       
       <div class="container1">
         <div class="colum1">
