--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
         <div class="colum1">
 <ol> 
    <li><b>Distribuciones populares de Linux</b></li> <br>
+
+   <ul >
+        <li class="lis">Fedora</li>
+        <li class="lis">Linux Mint</li>
+        <li class="lis">Suse</li>
+        <li class="lis">Linux Lite</li>
+        <li class="lis">  Linux Mint</li>
+        <li class="lis"> Manjaro Linux</li>
+        <li class="lis">MX Linux</li>
+        <li class="lis">openSUSE</li>
+        <li class="lis">Pop!_OS</li>
+      </ul>
       <ol>
          <li class="lis">Fedora Linux</li>
          <li class="lis">Linux Mint</li>
