--- a/index.html
+++ b/index.html
@@ -200,6 +200,51 @@
 <input class="inicio" type="text" placeholder="Escribe tu correo:"></input> <br> <br>
 <input class="inicio" type="password" placeholder="Escribe tu contraseña:"></input> <br> <br>
 <button class="btn">Iniciar</button> <br> <br> </div> </div>
+
+        <div class="container2">
+          <div class="calculadora dark">
+            <div class="alternador-tema activo">
+              <i class="alternador-icon"></i>
+            </div>
+            <div class="display-pantalla">
+              <div id="display"></div>
+            </div>
+            <div class="buttons">
+              <table>
+                <tr>
+                  <td><button class="btn-operador" id="claro">C</button></td>
+                  <td><button class="btn-operador" id="/">&divide;</button></td>
+                  <td><button class="btn-operador" id="*">&times;</button></td>
+                  <td><button class="btn-operador" id="retroceso"><</button></td>
+                </tr>
+                <tr>
+                  <td><button class="btn-numero" id="7">7</button></td>
+                  <td><button class="btn-numero" id="8">8</button></td>
+                  <td><button class="btn-numero" id="9">9</button></td>
+                  <td><button class="btn-operador" id="-">-</button></td>
+                </tr>
+                <tr>
+                  <td><button class="btn-numero" id="4">4</button></td>
+                  <td><button class="btn-numero" id="5">5</button></td>
+                  <td><button class="btn-numero" id="6">6</button></td>
+                  <td><button class="btn-operador" id="+">+</button></td>
+                </tr>
+                <tr>
+                  <td><button class="btn-numero" id="1">1</button></td>
+                  <td><button class="btn-numero" id="2">2</button></td>
+                  <td><button class="btn-numero" id="3">3</button></td>
+                  <td rowspan="2"><button class="btn-igual" id="igual">=</button></td>
+                </tr>
+                <tr>
+                  <td><button class="btn-operador" id="(">(</button></td>
+                  <td><button class="btn-numero" id="0">0</button></td>
+                  <td><button class="btn-operador" id=")">)</button></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+
 <footer>
   <div class="footer-wrapper">
     <footer class="footer">
@@ -218,7 +263,7 @@
     </footer>
 </footer>
    
-
+<script src="main.js"></script>
 
 </body >
 </div>
